--- a/settings.gradle
+++ b/settings.gradle
@@ -7,7 +7,7 @@
  * in the user manual at https://docs.gradle.org/7.4.2/userguide/multi_project_builds.html
  */
 
-rootProject.name = 'cando'
+rootProject.name = 'howto'
 include('app', 'utilities')
 include 'npm-detector'
 include 'markdown-detector'
