--- a/gradle-detector/build.gradle
+++ b/gradle-detector/build.gradle
@@ -8,7 +8,7 @@ repositories {
 
 dependencies {
     implementation project(":utilities")
-    implementation 'org.codehaus.groovy:groovy-all:3.0.10'
+    testImplementation 'org.codehaus.groovy:groovy-all:3.0.10'
     testImplementation 'org.spockframework:spock-core:2.1-groovy-3.0'
     testImplementation 'junit:junit:4.13.2'
 }
