--- a/npm-detector/build.gradle
+++ b/npm-detector/build.gradle
@@ -8,8 +8,8 @@ repositories {
 
 dependencies {
     implementation project(":utilities")
-    implementation 'org.codehaus.groovy:groovy-all:3.0.10'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.2.2'
+    testImplementation 'org.codehaus.groovy:groovy-all:3.0.10'
 }
 
 test {
