--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -24,7 +24,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
       with:
-        depth: 0
+        fetch-depth: 0
     - name: Set up JDK 11
       uses: actions/setup-java@v3
       with:
