--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Build with Gradle
         uses: gradle/gradle-build-action@0d13054264b0bb894ded474f08ebb30921341cee
         with:
-          arguments: build :app:nativeImage
+          arguments: build :app:nativeDistZip
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
