--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -44,9 +44,9 @@ jobs:
         arguments: :app:nativeImage
     - uses: actions/upload-artifact@v3
       with:
-        name: JavaDist
+        name: JavaDist ${{ matrix.os }}
         path: app/build/distributions
     - uses: actions/upload-artifact@v3
       with:
-        name: NativeBuild
+        name: NativeBuild ${{ matrix.os }}
         path: app/build/graal
