--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,7 +37,7 @@ jobs:
         id: get_version
         run: VERSION=$(./gradlew currentVersion -q -Prelease.quiet) && echo ::set-output name=VERSION::$VERSION
       - name: Rename files
-        shell: |
+        run: |
           mv app/build/nativeDist/how-native*.zip app/build/nativeDist/how-${{matrix.os}}-${{ steps.get_version.outputs.VERSION }}.zip
       - name: Upload Release Files
         uses: softprops/action-gh-release@v1
