--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'base'
-    id 'pl.allegro.tech.build.axion-release' version '1.13.6'
+    alias(libs.plugins.axion)
 }
 
 allprojects {
