fix distribution names

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,15 @@ plugins {
 }
 apply plugin: 'com.github.johnrengelman.shadow'
 
-
+archivesBaseName = 'how'
+distributions {
+    main {
+        distributionBaseName = 'how'
+    }
+    shadow {
+        distributionBaseName = 'how'
+    }
+}
 repositories {
     // Use Maven Central for resolving dependencies.
     mavenCentral()
