--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [macos-latest, ubuntu-latest]
+        os: [ubuntu-latest]
     steps:
       - uses: actions/checkout@v3
         with:
@@ -30,30 +30,37 @@ jobs:
           java-version: '11'
           distribution: 'temurin'
       - name: Build with Gradle
-        uses: gradle/gradle-build-action@0d13054264b0bb894ded474f08ebb30921341cee
-        with:
-          arguments: build :app:nativeDistZip
+        run: ./gradlew build :app:build
       - name: Get Release Version
         id: get_version
         run: VERSION=$(./gradlew currentVersion -q -Prelease.quiet) && echo ::set-output name=VERSION::$VERSION
-      - name: Rename files
-        run: |
-          mv app/build/nativeDist/how-native*.zip app/build/nativeDist/how-${{matrix.os}}-${{ steps.get_version.outputs.VERSION }}.zip
-      - name: Upload Release Files
-        uses: softprops/action-gh-release@v1
-        with:
-          fail_on_unmatched_files: true
-          files: |
-            app/build/distributions/how-*.zip
-            app/build/nativeDist/how-${{matrix.os}}-${{ steps.get_version.outputs.VERSION }}.zip
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  create_release:
-    name: Create Release
-    runs-on: ubuntu-latest
-    steps:
-      - name: Create Github Release
-        uses: softprops/action-gh-release@v1
+      - name: Create Release
         id: create_release
+        uses: actions/create-release@v1.0.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ steps.get_version.outputs.VERSION }}
+          draft: false
+          prerelease: false
+      - name: Upload Release Asset (zip)
+        id: upload-release-asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./app/build/distributions/how-${{ steps.get_version.outputs.VERSION }}.zip
+          asset_name: how-${{ steps.get_version.outputs.VERSION }}.zip
+          asset_content_type: application/octet-stream
+      - name: Upload Release Asset (shadow jar)
+        id: upload-release-asset-shadow-jar
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./app/build/libs/how-${{ steps.get_version.outputs.VERSION }}-all.jar
+          asset_name: how-${{ steps.get_version.outputs.VERSION }}-all.jar
+          asset_content_type: application/octet-stream
