--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -18,11 +18,8 @@ permissions:
 
 jobs:
   build:
-    name: Build on ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest]
+    name: Build
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
       with:
