--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -29,10 +29,10 @@ jobs:
       with:
         java-version: '11'
         distribution: 'zulu'
+    - name: Setup Gradle
+      uses: gradle/actions/setup-gradle@v4
     - name: Build with Gradle
-      uses: gradle/gradle-build-action@0d13054264b0bb894ded474f08ebb30921341cee
-      with:
-        arguments: :app:build
+      run: ./gradlew :app:build
     - uses: actions/upload-artifact@v3
       with:
         name: Distributions
