--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,33 +30,11 @@ jobs:
       - name: Get Release Version
         id: get_version
         run: VERSION=$(./gradlew currentVersion -q -Prelease.quiet) && echo "VERSION=$VERSION" >> $GITHUB_OUTPUT
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1.0.0
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ steps.get_version.outputs.VERSION }}
-          draft: false
-          prerelease: false
-      - name: Upload Release Asset (zip)
-        id: upload-release-asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./app/build/distributions/how-${{ steps.get_version.outputs.VERSION }}.zip
-          asset_name: how-${{ steps.get_version.outputs.VERSION }}.zip
-          asset_content_type: application/octet-stream
-      - name: Upload Release Asset (shadow jar)
-        id: upload-release-asset-shadow-jar
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./app/build/libs/how-${{ steps.get_version.outputs.VERSION }}-all.jar
-          asset_name: how-${{ steps.get_version.outputs.VERSION }}-all.jar
-          asset_content_type: application/octet-stream
+      - name: Release
+        run: |
+          gh release create \
+            --generate-notes \
+            --title 'Release ${{ github.ref_name }}' \
+            ${{ github.ref_name }} \
+            ./app/build/distributions/how-${{ steps.get_version.outputs.VERSION }}.zip \
+            ./app/build/libs/how-${{ steps.get_version.outputs.VERSION }}-all.jar
