--- a/.github/workflows/test_update.yml
+++ b/.github/workflows/test_update.yml
@@ -31,11 +31,11 @@ jobs:
       - name: trigger homebrew update
         # The PAT should have actions:read-write
         run: |
-          echo curl -L \
+            curl -L \
             -X POST \
             --fail-with-body \
             -H "Accept: application/vnd.github+json" \
-            -H "Authorization: Bearer {{ secrets.HOMEBREW_PAT }}" \
+            -H "Authorization: Bearer ${{ secrets.HOMEBREW_PAT }}" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             https://api.github.com/repos/rundeckpro/homebrew-howto-cli-tool/actions/workflows/update.yml/dispatches \
             -d '{"ref":"main","inputs":{"version":"${{steps.download.outputs.version}}","sha":"${{steps.download.outputs.sha}}","url":"${{steps.download.outputs.url}}"}'
