--- a/.github/workflows/test_update.yml
+++ b/.github/workflows/test_update.yml
@@ -38,4 +38,4 @@ jobs:
             -H "Authorization: Bearer ${{ secrets.HOMEBREW_PAT }}" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             https://api.github.com/repos/rundeckpro/homebrew-howto-cli-tool/actions/workflows/update.yml/dispatches \
-            -d '{"ref":"main","inputs":{"version":"${{steps.download.outputs.version}}","sha":"${{steps.download.outputs.sha}}","url":"${{steps.download.outputs.url}}"}'
+            -d '{"ref":"main","inputs":{"version":"${{steps.download.outputs.version}}","sha":"${{steps.download.outputs.sha}}","url":"${{steps.download.outputs.url}}"}}'
