--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,7 +9,7 @@ picocli = "4.7.6"
 commonmark = "0.17.0"
 buildconfig = "5.4.0"
 jackson = "2.17.2"
-
+lombok = "1.18.20"
 [libraries]
 
 
@@ -25,6 +25,7 @@ commonmarkExtAutolink = { module = "com.atlassian.commonmark:commonmark-ext-auto
 
 
 jacksonDatabind = { module = "com.fasterxml.jackson.core:jackson-databind", version.ref = "jackson" }
+lombok = { module = "org.projectlombok:lombok", version.ref = "lombok" }
 [bundles]
 
 test = ["junit", "groovy", "spock"]
