cleanup gradle deprecation warnings

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,9 @@ plugins {
     alias(libs.plugins.shadow)
 }
 apply plugin: 'com.github.johnrengelman.shadow'
-
-archivesBaseName = 'how'
+base {
+    archivesName = 'how'
+}
 distributions {
     main {
         distributionBaseName = 'how'
@@ -55,7 +56,7 @@ dependencies {
 //force distZip/distTar artifacts to be overwritten by shadow versions
 shadowDistZip.mustRunAfter distZip
 shadowDistTar.mustRunAfter distTar
-tasks.named('test') {
+tasks.withType(Test).configureEach {
     // Use JUnit Platform for unit tests.
     useJUnitPlatform()
 }
